Fix some styles in playlists

--- a/src/css/Playlist.scss
+++ b/src/css/Playlist.scss
@@ -188,7 +188,7 @@
             background: #253244;
         }
 
-        a {
+        #PlaylistTrackIconRedirect {
             align-self: center;
         }
 
