Center images on search results

--- a/src/css/SearchTrack.scss
+++ b/src/css/SearchTrack.scss
@@ -30,6 +30,10 @@
     color: white;
 }
 
+#SearchTrackImageRedirect {
+    align-self: center;
+}
+
 #SearchResultImage {
     max-width: 90px;
     max-height: 90px;
