FUCK FUCK FUCK FUCK REVERT THE FUCKING COMMIT
This reverts commit 79f22633be0eb46a5645d264d421df47960fe819.

--- a/src/css/NavBar.scss
+++ b/src/css/NavBar.scss
@@ -1,6 +1,8 @@
 .navbar {
     @apply bg-black flex flex-wrap items-center justify-between h-16 p-6 fixed w-full transition-all;
     @apply bg-gradient-to-r from-indigo-900/25 to-black;
+
+    margin-top: 28px;
 }
 
 #Title {
