Add custom font

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 /*
  Dark (default) theme colors
  */
@@ -35,6 +37,7 @@ body {
     padding: 0;
     height: 100%;
     width: 100%;
+    font-family: 'Poppins', sans-serif;
 }
 
 .AppContainer {
