--- a/src/css/NavPanel.scss
+++ b/src/css/NavPanel.scss
@@ -2,4 +2,87 @@
     width: 240px;
     background-color: var(--background-primary-color);
     grid-area: nav;
+    padding: 18px 18px 0 18px;
+}
+
+.CurrentUser_LoginBtn {
+    width: 100%;
+    height: 35px;
+    border-radius: 5px;
+    background-color: var(--accent-color) !important;
+    color: #fff !important;
+    font-weight: 500;
+    font-size: 15px;
+    border: none;
+    transition: all 0.2s ease-in-out;
+    justify-content: center;
+
+    &:hover {
+        background-color: var(--accent-color);
+        opacity: 0.8;
+        cursor: pointer;
+    }
+}
+
+.CurrentUser {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.CurrentUser_Info {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+
+.CurrentUser_Img {
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+}
+
+.CurrentUser_Text {
+    display: flex;
+    flex-direction: row;
+    font-size: 15px;
+
+    p {
+        font-weight: 500;
+        color: var(--text-primary-color);
+    }
+
+    p:nth-child(2) {
+        color: var(--text-secondary-color);
+    }
+}
+
+.CurrentUser_DropdownButton {
+    padding: 0 !important;
+    border-radius: 50%;
+}
+
+.CurrentUser_Chevron {
+    font-size: 30px;
+    border-radius: 50%;
+    color: var(--icon-secondary-color);
+    padding: 5px;
+    transition: all 0.2s ease-in-out;
+
+    &:hover {
+        background-color: var(--background-secondary-color);
+        color: var(--accent-color);
+        cursor: pointer;
+    }
+}
+
+#currentUserDropdown {
+    left: 220px;
+
+    :last-child:hover {
+        background-color: #cb0101;
+    }
 }
