More theme text colors

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -12,6 +12,7 @@ html {
 
     --text-primary-color: #FFFFFF;
     --text-secondary-color: #A6A6A6;
+    --text-tertiary-color: #999999;
 
     --accent-color: #3484FC;
 }
@@ -28,6 +29,7 @@ html[data-theme="light"] {
 
     --text-primary-color: #656565;
     --text-secondary-color: #A6A6A6;
+    --text-tertiary-color: #838383;
 
     --accent-color: #ED7D64;
 }
