--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -73,6 +73,10 @@ body {
     display: flex;
     align-items: center;
     gap: 5px;
+
+    &:active {
+        scale: 0.9;
+    }
 }
 
 .DropdownContent {
