Disable `user-select` on text elements

--- a/src/css/NavPanel.scss
+++ b/src/css/NavPanel.scss
@@ -50,6 +50,8 @@
     flex-direction: row;
     font-size: 15px;
 
+    user-select: none;
+
     p {
         font-weight: 500;
         color: var(--text-primary-color);
