Finish basic track implementation
- Added duration
- Added context menu icon
- Pull data from TrackData

--- a/src/css/components/Track.scss
+++ b/src/css/components/Track.scss
@@ -43,7 +43,8 @@
     align-items: center;
     justify-content: center;
 
-    gap: 10px;
+    gap: 36px;
 
     padding-left: 20px;
+    color: var(--text-secondary-color);
 }
