--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -56,6 +56,7 @@ body {
     grid-template-columns: auto 1fr;
     grid-template-rows: auto 1fr;
     overflow: hidden;
+    user-select: none;
 }
 
 .MainView {
