--- a/src/css/layout/ControlPanel.scss
+++ b/src/css/layout/ControlPanel.scss
@@ -10,6 +10,10 @@
     background-color: var(--background-primary-color);
 }
 
+.ControlPanel_Repeat {
+    color: var(--accent-color);
+}
+
 .ControlPanel_Track {
     display: flex;
     flex-direction: row;
@@ -60,22 +64,22 @@
 .ControlPanel_Controls {
     display: flex;
     gap: 20px;
+}
+
+.ControlPanel_Control {
     font-size: 20px;
+    transition: all 0.1s ease-in-out;
     color: var(--icon-secondary-color);
 
-    svg {
-        transition: all 0.1s ease-in-out;
+    &:nth-child(4) {
+        color: var(--icon-primary-color);
+    }
+
+    &:hover {
+        filter: brightness(1.5);
 
         &:nth-child(4) {
-            color: var(--icon-primary-color);
-        }
-
-        &:hover {
-            filter: brightness(1.5);
-
-            &:nth-child(4) {
-                scale: 1.2;
-            }
+            scale: 1.2;
         }
     }
 }
