Add default styles
- Add default text styles
- Add default main view left padding

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -63,6 +63,8 @@ body {
     grid-area: main;
     background-color: var(--background-secondary-color);
     overflow: auto;
+
+    padding-left: 32px;
 }
 
 .BasicButton {
