Remove temporary border from login form

--- a/src/css/pages/Login.scss
+++ b/src/css/pages/Login.scss
@@ -6,7 +6,6 @@
 
     width: 500px;
     height: 460px;
-    border: #3484FC 2px solid;
 }
 
 .Login_Title {
@@ -45,8 +44,8 @@
     line-height: 27px;
     justify-content: center;
 
-    color: white !important;
-    border: 1px solid white !important;
+    color: var(--text-primary-color) !important;
+    border: 1px solid var(--text-primary-color) !important;
     border-radius: 64px !important;
     background-color: var(--background-primary-color) !important;
 }
@@ -62,12 +61,12 @@
 
     p {
         margin: 0;
-        color: white;
+        color: var(--text-primary-color);
         text-align: left;
     }
 }
 
 .Login_Reason {
-    color: white;
+    color: var(--text-primary-color);
     text-align: center;
 }
