--- a/src/css/Text.scss
+++ b/src/css/Text.scss
@@ -8,6 +8,7 @@ h1 {
     font-weight: 600;
     font-size: 80px;
     line-height: 120px;
+    margin: 0;
 }
 
 h2 {
@@ -16,4 +17,5 @@ h2 {
     font-weight: 600;
     font-size: 24px;
     line-height: 36px;
+    margin: 0;
 }
