--- a/src/css/components/Track.scss
+++ b/src/css/components/Track.scss
@@ -10,6 +10,7 @@
 .Track_Icon {
     max-width: 67.5px;
     max-height: 67.5px;
+    object-fit: cover;
 
     padding-right: 20px;
     border-radius: 10px;
