Add default text styles for `h3`

--- a/src/css/layout/NavPanel.scss
+++ b/src/css/layout/NavPanel.scss
@@ -141,6 +141,8 @@
     color: var(--text-tertiary-color);
     font-size: 15px;
     margin-left: 10px;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
 }
 
 .Playlists_Container {
