--- a/src/css/Text.scss
+++ b/src/css/Text.scss
@@ -17,3 +17,11 @@ h2 {
     font-size: 24px;
     margin: 0;
 }
+
+h3 {
+    color: var(--text-primary-color);
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    margin: 0;
+}
