Add style for scrollbar

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -45,6 +45,19 @@ body {
     }
 }
 
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--accent-color);
+    border-radius: 10px;
+}
+
 .AppContainer {
     display: grid;
     height: 100vh;
