--- a/src/css/layout/ControlPanel.scss
+++ b/src/css/layout/ControlPanel.scss
@@ -71,6 +71,10 @@
     transition: all 0.1s ease-in-out;
     color: var(--icon-secondary-color);
 
+    &:active {
+        scale: 0.9;
+    }
+
     &:nth-child(4) {
         color: var(--icon-primary-color);
     }
