--- a/src/css/layout/ControlPanel.scss
+++ b/src/css/layout/ControlPanel.scss
@@ -89,7 +89,34 @@
 }
 
 .ControlPanel_ProgressBar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
     width: 50%;
+}
+
+.ControlPanel_ProgressBar_Time {
+    font-size: 12px;
+    color: var(--text-secondary-color);
+}
+
+.ControlPanel_ProgressBar_Track {
+    width: 100%;
+    height: 5px;
+    background-color: var(--background-secondary-color);
+    border-radius: 5px;
+    position: relative;
+    cursor: pointer;
+}
+
+.ControlPanel_ProgressBar_Fill {
+    height: 100%;
+    background-color: var(--accent-color);
+    border-radius: 5px;
+    position: absolute;
+    left: 0;
+    top: 0;
 }
 
 .ControlPanel_Right {
@@ -133,6 +160,11 @@
 
     .ControlPanel_MainControls {
         flex-direction: column;
-        gap: 10px;
+        margin-top: 15px;
+        gap: 0;
+    }
+
+    .ControlPanel_ProgressBar {
+        width: 70%;
     }
 }
