--- a/src/css/components/Track.scss
+++ b/src/css/components/Track.scss
@@ -1,11 +1,20 @@
 .Track {
     display: flex;
-    flex-wrap: wrap;
     flex-direction: row;
+    padding: 10px;
+    justify-content: space-between;
+    border-radius: 10px;
 
     width: 100%;
-    max-height: 67.5px;
-    padding-bottom: 10px;
+    &:hover {
+        background-color: var(--background-primary-color);
+    }
+}
+
+.Track_Info {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
 
     justify-content: space-between;
 }
@@ -14,12 +23,10 @@
     max-width: 67.5px;
     max-height: 67.5px;
     object-fit: cover;
-
-    padding-right: 20px;
-    border-radius: 10px;
+    border-radius: 7px;
 }
 
-.Track_Info {
+.Track_Text {
     display: flex;
     flex-direction: column;
     justify-content: center;
