--- a/src/css/pages/SearchResults.scss
+++ b/src/css/pages/SearchResults.scss
@@ -1,3 +1,6 @@
 .SearchResults {
-    padding-left: 20px;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    overflow-x: hidden;
 }
