--- a/src/css/components/Track.scss
+++ b/src/css/components/Track.scss
@@ -56,4 +56,8 @@
 
     padding-right: 24px;
     color: var(--text-secondary-color);
+
+    p {
+        color: var(--text-secondary-color);
+    }
 }
