Re-implement global 32px padding

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -73,6 +73,7 @@ body {
 }
 
 .MainView {
+    padding-left: 32px;
     grid-area: main;
     background-color: var(--background-secondary-color);
     overflow: auto;
