--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -73,7 +73,7 @@ body {
 }
 
 .MainView {
-    padding-left: 32px;
+    padding: 20px;
     grid-area: main;
     background-color: var(--background-secondary-color);
     overflow: auto;
