Add `Reconnect to Gateway` and `Get Login Code`
get login code has to be implemented, waiting for modals

--- a/src/css/pages/Settings.scss
+++ b/src/css/pages/Settings.scss
@@ -52,6 +52,11 @@
     background-color: var(--background-primary-color);
 }
 
+.Setting_Button {
+    justify-content: center;
+    background-color: var(--accent-color) !important;
+}
+
 .Settings_Dropdown {
     margin-top: 10px;
 }
