--- a/src/css/layout/ControlPanel.scss
+++ b/src/css/layout/ControlPanel.scss
@@ -10,6 +10,15 @@
     background-color: var(--background-primary-color);
 }
 
+.ControlPanel_DisabledOverlay {
+    position: absolute;
+    width: 100%;
+    height: 60px;
+    background-color: var(--background-primary-color);
+    opacity: 0.4;
+    z-index: 1;
+}
+
 .ControlPanel_Repeat {
     color: var(--accent-color);
 }
@@ -152,6 +161,10 @@
 
 @media (max-width: 1440px) {
     .ControlPanel {
+        height: 80px;
+    }
+
+    .ControlPanel_DisabledOverlay {
         height: 80px;
     }
 
