--- a/src/css/components/User.scss
+++ b/src/css/components/User.scss
@@ -5,6 +5,7 @@
     width: 90%;
     height: 58px;
     justify-content: space-between;
+    align-items: center;
 }
 
 .User_Image {
@@ -18,17 +19,11 @@
     display: flex;
     flex-direction: column;
 
-    p {
+    .User_Listening {
         margin: 0;
         font-size: 12px;
         line-height: 18px;
         color: var(--text-secondary-color);
-
-        &:nth-child(1) {
-            font-size: 14px;
-            line-height: 21px;
-            color: var(--text-primary-color);
-        }
     }
 }
 
@@ -48,4 +43,10 @@
     color: #262626;
     align-self: center;
     background-color: var(--background-secondary-color) !important;
+}
+
+.User_RecentTime {
+    margin: 0;
+    font-size: 12px;
+    color: var(--text-secondary-color);
 }
