Animate user listen along button

--- a/src/css/components/User.scss
+++ b/src/css/components/User.scss
@@ -40,8 +40,13 @@
 .User_Listen {
     width: 33px;
     height: 33px;
-    color: #262626;
     align-self: center;
+    transition: all 0.1s ease-in-out;
+
+    &:hover {
+        scale: 1.2;
+        cursor: pointer;
+    }
 }
 
 .User_RecentTime {
