Implement new audio settings

--- a/src/css/pages/Settings.scss
+++ b/src/css/pages/Settings.scss
@@ -28,6 +28,11 @@
             font-size: 13px;
             color: var(--text-secondary-color);
         }
+
+        &:nth-child(3) {
+            font-size: 13px;
+            color: var(--text-secondary-color);
+        }
     }
 }
 
