--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -155,3 +155,104 @@ body {
         margin: 0;
     }
 }
+
+.BasicModal_Backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: brightness(0.5);
+    z-index: 1000;
+    display: none;
+}
+
+.BasicModal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 400px;
+    height: auto;
+    background-color: var(--background-secondary-color);
+    border-radius: 10px;
+    z-index: 1001;
+    padding: 20px;
+    box-shadow: #00000070 0 0 10px 0;
+    animation: slide-in 0.2s ease-in-out forwards;
+
+    h1 {
+        margin: 0;
+        font-size: 30px;
+    }
+
+    p {
+        margin: 0;
+    }
+
+    input {
+        padding: 10px;
+        border-radius: 10px;
+        border: transparent 2px solid;
+        background-color: var(--background-primary-color);
+        color: var(--text-primary-color);
+        font-size: 15px;
+        transition: all 0.2s ease-in-out;
+
+        &:focus {
+            outline: none;
+            border: var(--accent-color) 2px solid;
+        }
+    }
+
+    textarea {
+        padding: 10px;
+        border-radius: 10px;
+        height: 100px;
+        border: transparent 2px solid;
+        background-color: var(--background-primary-color);
+        color: var(--text-primary-color);
+        font-size: 15px;
+        transition: all 0.2s ease-in-out;
+        resize: none;
+
+        &:focus {
+            outline: none;
+            border: var(--accent-color) 2px solid;
+        }
+    }
+
+    img {
+        width: 100%;
+        height: auto;
+        border-radius: 10px;
+    }
+}
+
+@keyframes slide-in {
+    0% {
+        top: 0;
+    }
+    100% {
+        top: 50%;
+    }
+}
+
+.BasicModal_Submit {
+    width: 100%;
+    justify-content: center;
+    border-radius: 10px;
+    border: var(--accent-color) 2px solid;
+    transition: all 0.2s ease-in-out;
+    background-color: transparent;
+
+    &:hover {
+        background-color: var(--accent-color);
+        color: white;
+        cursor: pointer;
+    }
+}
+
