Add basic drag & drop support

--- a/src/css/components/Track.scss
+++ b/src/css/components/Track.scss
@@ -4,6 +4,7 @@
     padding: 10px;
     justify-content: space-between;
     border-radius: 10px;
+    cursor: default;
 
     &:hover {
         background-color: var(--background-primary-color);
