--- a/src/css/components/MiniPlayer.scss
+++ b/src/css/components/MiniPlayer.scss
@@ -1,4 +1,9 @@
 .MiniPlayer {
-    width: 428px;
-    height: 240px;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    user-select: none;
+
+    color: var(--text-primary-color);
+    background-color: var(--background-primary-color);
 }
