--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -164,7 +164,8 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    backdrop-filter: brightness(0.5);
+    background-color: #00000070;
+    background-size: cover;
     z-index: 1000;
     display: none;
 }
