Animate login buttons

--- a/src/css/components/Login.scss
+++ b/src/css/components/Login.scss
@@ -6,6 +6,7 @@
 
     width: 500px;
     height: 460px;
+    padding: 60px 30px !important;
 }
 
 .Login_Title {
@@ -34,6 +35,12 @@
     color: white !important;
     border-radius: 64px !important;
     background-color: var(--accent-color) !important;
+    transition: all 0.2s ease-in-out;
+
+    &:hover {
+        cursor: pointer;
+        scale: 1.1;
+    }
 }
 
 .Login_Guest {
@@ -44,9 +51,15 @@
     justify-content: center;
 
     color: var(--text-primary-color) !important;
-    border: 1px solid var(--text-primary-color) !important;
+    border: 1px solid var(--accent-color) !important;
     border-radius: 64px !important;
     background-color: var(--background-primary-color) !important;
+    transition: all 0.2s ease-in-out;
+
+    &:hover {
+        cursor: pointer;
+        scale: 1.1;
+    }
 }
 
 .Login_Remember {
@@ -66,6 +79,6 @@
 }
 
 .Login_Reason {
-    color: var(--text-primary-color);
+    color: var(--text-secondary-color);
     text-align: center;
 }
