--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -185,7 +185,7 @@ body {
     z-index: 1001;
     padding: 20px;
     box-shadow: #00000070 0 0 10px 0;
-    animation: slide-in 0.2s ease-in-out forwards;
+    animation: expand 0.2s ease-in-out forwards;
 
     h1 {
         margin: 0;
@@ -235,12 +235,12 @@ body {
     }
 }
 
-@keyframes slide-in {
+@keyframes expand {
     0% {
-        top: 0;
+        scale: 0;
     }
     100% {
-        top: 50%;
+        scale: 1;
     }
 }
 
