--- a/src/css/pages/Playlist.scss
+++ b/src/css/pages/Playlist.scss
@@ -141,3 +141,10 @@
     overflow-x: auto;
     overflow-y: hidden;
 }
+
+.PlaylistCheckBoxModal {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+}
