Move playlistCheckboxModal style to App.scss

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -259,3 +259,10 @@ body {
     }
 }
 
+.PlaylistCheckBoxModal {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
