--- a/src/css/layout/NavPanel.scss
+++ b/src/css/layout/NavPanel.scss
@@ -138,11 +138,27 @@
 }
 
 .Playlists_Header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin: 20px 10px;
     color: var(--text-tertiary-color);
-    font-size: 15px;
-    margin-left: 10px;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
+    font-size: 20px;
+
+    h3 {
+        margin: 0;
+        color: var(--text-tertiary-color);
+    }
+
+    svg {
+        transition: all 0.2s ease-in-out;
+
+        &:hover {
+            color: var(--text-primary-color);
+            cursor: pointer;
+        }
+    }
 }
 
 .Playlists_Container {
@@ -168,4 +184,30 @@
         color: var(--text-primary-color);
         cursor: pointer;
     }
+}
+
+.PlaylistImportButton {
+    justify-content: center;
+    border-radius: 10px !important;
+    transition: all 0.2s ease-in-out;
+
+    &:hover {
+        background-color: var(--accent-color);
+        cursor: pointer;
+    }
+}
+
+.OR_Divider {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.OR_Divider_Line {
+    width: 100%;
+    height: 1px;
+    background-color: var(--text-tertiary-color);
+    margin: 0 10px;
+    border-radius: 50%;
 }
