--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -266,3 +266,13 @@ body {
     justify-content: space-between;
 }
 
+.Key {
+    margin-left: 10px;
+    padding: 5px 10px 10px;
+    border-radius: 10px;
+    background-color: #161618;
+    box-shadow: inset 0 -5px 0 #00000070;
+    color: white;
+    font-size: 15px;
+}
+
