--- a/src/css/components/MiniPlayer.scss
+++ b/src/css/components/MiniPlayer.scss
@@ -1,9 +1,142 @@
 .MiniPlayer {
     width: 100%;
-    height: 100vh;
+    height: 220px;
+    padding: 10px;
+
     display: flex;
     user-select: none;
+    flex-direction: column;
+    justify-content: space-between;
 
     color: var(--text-primary-color);
     background-color: var(--background-primary-color);
+}
+
+.MiniPlayer_Bar {
+    display: flex;
+    flex-direction: row-reverse;
+
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 17px;
+    z-index: 1000000;
+}
+
+.TopButtons {
+    color: var(--icon-primary-color);
+    padding: 5px 12px;
+    font-size: 20px;
+    background-color: var(--background-primary-color);
+
+    &:nth-child(2) {
+        font-size: 17px;
+        padding: 6.5px 13.5px;
+    }
+
+    &:first-child:hover {
+        background-color: #ec2323;
+    }
+
+    &:hover {
+        background-color: var(--background-secondary-color);
+    }
+}
+
+.MiniPlayer_Track {
+    display: flex;
+    flex-direction: row;
+    align-self: center;
+    justify-content: center;
+    padding-top: 49px;
+
+    p {
+        margin: 0;
+        font-size: 14px;
+        line-height: 21px;
+        color: var(--text-primary-color);
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    p:nth-child(2) {
+        font-size: 12px;
+        line-height: 18px;
+        color: var(--text-secondary-color);
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+}
+
+.MiniPlayer_Icon {
+    height: 64px;
+    width: 64px;
+    padding-right: 15px;
+}
+
+.MiniPlayer_Info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-self: center;
+    height: 100%;
+}
+
+.MiniPlayer_Actions {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    gap: 28px;
+}
+
+.MiniPlayer_Controls {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    gap: 23px;
+    width: 300px;
+    height: 28px;
+}
+
+.MiniPlayer_Control {
+    font-size: 256px;
+    transition: all 0.1s ease-in-out;
+    color: var(--icon-secondary-color);
+
+    height: auto;
+
+    &:active {
+        scale: 0.9;
+    }
+
+    &:nth-child(4) {
+        color: var(--icon-primary-color);
+    }
+
+    &:hover {
+        filter: brightness(1.5);
+
+        &:nth-child(4) {
+            scale: 1.2;
+        }
+    }
+}
+
+.MiniPlayer_Progress {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 12px;
+    padding-bottom: 6px;
+
+    p {
+        margin: 0;
+    }
 }
