--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -275,6 +275,11 @@ body {
     box-shadow: inset 0 -5px 0 #00000070;
     color: white;
     font-size: 15px;
+
+    &:active {
+        box-shadow: none;
+        padding: 5px 10px;
+    }
 }
 
 .AnimatedView {
