Resolve reference warning at build time

--- a/src/css/components/Login.scss
+++ b/src/css/components/Login.scss
@@ -10,7 +10,7 @@
 }
 
 #login {
-    background-image: url("background.svg");
+    background-image: url("/background.svg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
