Remove outline from SVGs on focus

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -46,6 +46,10 @@ body {
     * {
         font-family: 'Poppins', sans-serif;
     }
+
+    svg:focus {
+        outline: none;
+    }
 }
 
 ::-webkit-scrollbar {
