--- a/src/css/components/Playlist.scss
+++ b/src/css/components/Playlist.scss
@@ -48,8 +48,9 @@
     top: 50%;
     transform: translateY(-50%);
     font-size: 30px;
+    color: white !important;
     background-color: var(--accent-color) !important;
-    box-shadow: 0 0 20px 0 var(--background-primary-color);
+    box-shadow: 0 0 20px 0 #000000;
     transition: all 0.1s ease-in-out;
     margin-left: -10px;
 
