--- a/src/css/pages/Home.scss
+++ b/src/css/pages/Home.scss
@@ -22,50 +22,6 @@
     }
 }
 
-.Home_PlaylistFavorites {
-    width: 400px;
-    height: 270px;
-    background: linear-gradient(90deg, #930606, #c94f3f);
-    padding: 20px;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    transition: all 5s ease-in-out;
-
-    svg {
-        width: 100px;
-        height: 100px;
-        margin-bottom: 20px;
-        color: white;
-        transition: all 0.4s ease-in-out;
-    }
-
-    h3 {
-        margin: 0;
-        font-size: 30px;
-        color: white;
-        animation: fade-in 0.4s ease-in-out forwards;
-        font-weight: 500;
-    }
-
-    &:hover {
-        cursor: pointer;
-        box-shadow: 0 0 20px 0 var(--background-primary-color);
-
-        svg {
-            margin-top: 40px;
-            width: 120px;
-            height: 120px;
-        }
-
-        h3 {
-            animation: fade-out 0.4s ease-in-out forwards;
-        }
-    }
-}
-
 @keyframes fade-out {
     0% {
         opacity: 1;
@@ -75,11 +31,77 @@
     }
 }
 
-@keyframes fade-in {
-    0% {
-        opacity: 0;
+.Home_Column2 {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    padding: 0 20px;
+}
+
+.Home_Recents {
+    min-width: 800px;
+    margin-top: 40px;
+}
+
+.Home_Favorites {
+    margin-top: 40px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    gap: 20px;
+}
+
+.Home_FavoritesTrack {
+    width: 200px;
+    height: 200px;
+    border-radius: 10px;
+    position: relative;
+
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 10px;
+        z-index: 0;
     }
-    100% {
-        opacity: 1;
+
+    p {
+        padding: 0 10px;
+        width: 180px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        font-size: 15px;
+        font-weight: 300;
+        color: white;
+        z-index: 100;
+        margin: 0;
+        position: absolute;
+        bottom: 10px;
+    }
+
+    &::before {
+        content: "";
+        position: absolute;
+        width: 200px;
+        height: 200px;
+        background: linear-gradient(0deg, rgba(2, 1, 1, 0.89) 10%, rgba(0, 0, 0, 0));
+        border-radius: 10px;
+        z-index: 100;
+    }
+
+    &:hover {
+        cursor: pointer;
+
+        &::before, p {
+            animation: fade-out 0.2s ease-in-out forwards;
+        }
+    }
+}
+
+@media screen and (max-width: 1900px) {
+    .Home_Column2 {
+        flex-direction: column;
     }
 }
