Add cursor effect on hover

--- a/src/css/layout/TopBar.scss
+++ b/src/css/layout/TopBar.scss
@@ -75,6 +75,10 @@
     text-align: right;
     outline: none;
     border: none;
+
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 .TopBar_ActivityButton {
