Make list page look cleaner in minimum view

--- a/src/css/pages/Elixir.scss
+++ b/src/css/pages/Elixir.scss
@@ -3,17 +3,19 @@
 }
 
 .Elixir_ServerList {
-    @apply flex flex-row mt-[35px] pb-4;
+    @apply flex flex-row mt-[35px] pb-4 pr-5;
 
     max-width: 100%;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 5px;
 }
 
 .Elixir_Server {
-    @apply flex flex-col p-2 items-center;
+    @apply flex flex-col p-2 mb-[5px] items-center;
 
     background-color: var(--background-primary-color);
+    transition: background-color 0.25s ease-in-out;
+
     border-radius: 10px;
 
     width: 128px;
